update Transfer Remaining
