# models/transaction.go
@@ -5,10 +5,12 @@ import (
 )
 
 type Transaction struct {
-	ID         uint      `json:"id" gorm:"primaryKey"`
-	SenderID   uint      `json:"sender_id"`
-	ReceiverID uint      `json:"receiver_id"`
-	Amount     float64   `json:"amount"`
-	CreatedAt  time.Time `json:"created_at"`
-	UpdatedAt  time.Time `json:"updated_at"`
+	ID                uint      `json:"id" gorm:"primaryKey"`
+	SenderID          uint      `json:"sender_id"`
+	SenderRemaining   float64   `json:"ender_remaining "`
+	ReceiverID        uint      `json:"receiver_id"`
+	ReceiverRemaining float64   `json:"receiver_remaining "`
+	Amount            float64   `json:"amount"`
+	CreatedAt         time.Time `json:"created_at"`
+	UpdatedAt         time.Time `json:"updated_at"`
 }
